# internal/openapi/server.gen.go
@@ -4,11 +4,7 @@
 package openapi
 
 import (
-	"fmt"
-	"net/http"
-
 	"github.com/labstack/echo/v4"
-	"github.com/oapi-codegen/runtime"
 )
 
 // ServerInterface represents all server handlers.
@@ -19,12 +15,9 @@ type ServerInterface interface {
 	// ヘルスチェック
 	// (GET /health)
 	HealthCheck(ctx echo.Context) error
-	// ユーザーの取得
-	// (GET /user)
-	GetUser(ctx echo.Context, params GetUserParams) error
-	// ユーザーの作成
-	// (POST /user)
-	CreateUser(ctx echo.Context) error
+	// チームの登録
+	// (POST /teams)
+	CreateTeam(ctx echo.Context) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -50,30 +43,12 @@ func (w *ServerInterfaceWrapper) HealthCheck(ctx echo.Context) error {
 	return err
 }
 
-// GetUser converts echo context to params.
-func (w *ServerInterfaceWrapper) GetUser(ctx echo.Context) error {
-	var err error
-
-	// Parameter object where we will unmarshal all parameters from the context
-	var params GetUserParams
-	// ------------- Required query parameter "id" -------------
-
-	err = runtime.BindQueryParameter("form", true, true, "id", ctx.QueryParams(), &params.Id)
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
-	}
-
-	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.GetUser(ctx, params)
-	return err
-}
-
-// CreateUser converts echo context to params.
-func (w *ServerInterfaceWrapper) CreateUser(ctx echo.Context) error {
+// CreateTeam converts echo context to params.
+func (w *ServerInterfaceWrapper) CreateTeam(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.CreateUser(ctx)
+	err = w.Handler.CreateTeam(ctx)
 	return err
 }
 
@@ -107,7 +82,6 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 
 	router.GET(baseURL+"/grades", wrapper.GetGrades)
 	router.GET(baseURL+"/health", wrapper.HealthCheck)
-	router.GET(baseURL+"/user", wrapper.GetUser)
-	router.POST(baseURL+"/user", wrapper.CreateUser)
+	router.POST(baseURL+"/teams", wrapper.CreateTeam)
 
 }
