# internal/openapi/types.gen.go
@@ -3,22 +3,20 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package openapi
 
-// CreateUserResponse defines model for CreateUserResponse.
-type CreateUserResponse struct {
-	Email string `json:"email"`
-	Name  string `json:"name"`
+// CreateTeamRequest defines model for CreateTeamRequest.
+type CreateTeamRequest struct {
+	AddressCity  string `json:"address_city"`
+	AddressState string `json:"address_state"`
+	Description  string `json:"description"`
+	GradeId      string `json:"grade_id"`
+	IconPath     string `json:"icon_path"`
+	Name         string `json:"name"`
+	SportId      string `json:"sport_id"`
 }
 
 // GetGradesResponse defines model for GetGradesResponse.
 type GetGradesResponse struct {
 	Grades []Grade `json:"grades"`
-}
-
-// GetUserResponse defines model for GetUserResponse.
-type GetUserResponse struct {
-	Email string `json:"email"`
-	Id    string `json:"id"`
-	Name  string `json:"name"`
 }
 
 // Grade defines model for Grade.
@@ -27,8 +25,5 @@ type Grade struct {
 	Name string `json:"name"`
 }
 
-// GetUserParams defines parameters for GetUser.
-type GetUserParams struct {
-	// Id ユーザーID
-	Id string `form:"id" json:"id"`
-}
+// CreateTeamJSONRequestBody defines body for CreateTeam for application/json ContentType.
+type CreateTeamJSONRequestBody = CreateTeamRequest
